# heart-failure-analysis

./: README.md  modeling.py  pyproject.toml
latex/: bibliography.bib  document.aux  document.bbl  document.blg  document.out  document.tex
src/: eda.py  main.py
