[project]
name = "heart-failure-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.18.0",
    "jinja2>=3.1.6",
    "marimo>=0.14.17",
    "matplotlib>=3.10.5",
    "mlxtend>=0.23.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "ruff>=0.12.9",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "tabulate>=0.9.0",
    "xgboost>=3.0.4",
]
